[package]
name = "seek"
description = "A cli for quickly opening you apps!"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
dirs = "4.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tabled = "0.8.0"
colored = "2.0.0"